<resources>
    <string name="app_name">409Project</string>
    <string name="main_dashboard">Main Dashboard</string>
    <string name="NavBar2">Balance</string>
    <string name="NavBar3">Settings</string>
    <string name="NavBar1">Home</string>
    <string name="call_us">Call Us</string>
    <string name="Website">Our Website</string>
    <string name="AppVersion">Current App Version: 1.0.0</string>
    <string name="btnPrank">Get Free Money !</string>
    <string name="app_icon">AppIcon</string>
    <string name="AppName">Netly</string>
</resources>