<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Call button -->
    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_us"
        android:backgroundTint="@color/cyan"
        android:layout_marginTop="50dp"/>

    <!-- Website button -->
    <Button
        android:id="@+id/btn_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Website"
        android:layout_below="@id/btn_call"
        android:backgroundTint="@color/cyan"
        android:layout_marginVertical="20dp"/>

    <!-- Little Prank -->
    <Button
        android:id="@+id/btn_prank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPrank"
        android:layout_below="@id/btn_website"
        android:backgroundTint="@color/cyan"
/>
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <!-- Application version -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/NavBar"
        android:text="@string/AppVersion"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="10dp"
        />

    <!-- Navigation Bar -->
    <TableLayout
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cyan"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="12.5dp">

            <TextView
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:drawableTopCompat="@drawable/home"/>

            <TextView
                android:id="@+id/nav_dashboard"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:drawableTopCompat="@drawable/account"/>

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar3"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:drawableTint="@color/dark_blue"
                app:drawableTopCompat="@drawable/settings" />

        </TableRow>
    </TableLayout>

</RelativeLayout>