<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Icon Netly -->

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_icon"
        android:src="@raw/netly_icon"
        android:layout_marginTop="150dp"/>

    <!-- App Name -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:layout_below="@id/app_icon"
        android:gravity="center"
        android:textSize="90sp"
        android:textStyle="bold"
        android:textColor="@color/cyan"/>

    <!-- NavBar -->
    <TableLayout
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cyan"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="12.5dp">

            <TextView
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar1"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:drawableTint="@color/dark_blue"
                app:drawableTopCompat="@drawable/home"/>

            <TextView
                android:id="@+id/nav_dashboard"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:drawableTopCompat="@drawable/account"/>

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/NavBar3"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/settings"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>