<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TableLayout
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cyan"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/NavBar1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/nav_dashboard"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/NavBar2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/NavBar3"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true" />

        </TableRow>
    </TableLayout>

</RelativeLayout>